--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "./node_modules/.bin/webpack ./src/index.js ./dist/bundle.js --module-bind 'css=style-loader!css-loader' && firefox index.html"
   },
   "author": "justin.chang",
   "license": "ISC",
