Tutorial: react + electron, no-hot-reload

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "electron-react-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "./node_modules/.bin/webpack --progress --colors && firefox index.html",
+    "dev": "./node_modules/.bin/webpack --progress --colors && npm run app",
     "dev2": "./node_modules/.bin/webpack-dev-server --progress --colors --watch",
-    "hot-dev": "./node_modules/.bin/webpack-dev-server --devtool eval --progress --colors --hot --content-base dist"
+    "hot-dev": "./node_modules/.bin/webpack-dev-server --devtool eval --progress --colors --hot --content-base dist",
+    "app": "./node_modules/.bin/electron ."
   },
   "author": "justin.chang",
   "license": "ISC",
